--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,60 @@
   --color-black: #000000;
   --color-white: #FFFFFF;
 }
+
+.btn {
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.input {}
+
+.section {}
+
+.section__upper {}
+
+.section__title {}
+
+.container {
+  padding: 0 16px;
+}
+
+.header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.burger {
+    width: 24px;
+    height: 24px;
+
+    position: relative;
+}
+
+.burger__line {
+    position: absolute;
+    left: 0;
+
+    width: 100%;
+    height: 2px;
+
+    background: var(--color-black);
+
+    display: block;
+}
+
+.burger__line.line_1 {
+    top: 0;
+}
+
+.burger__line.line_2 {
+    top: 4px;
+}
+
+.burger__line.line_3 {
+    top: 8px;
+}
