--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,25 @@ body {
     left: 0;
 }
 
+.input {
+    background: none;
+
+    border: 1px solid var(--color-white);
+    border-radius: 72px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.input::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white); 
+}
+
 
 .btn {
     width: 100%;
@@ -173,6 +192,96 @@ body {
     padding: 0 18px;
 }
 
+.form-checkbox label {
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+    margin-top: 12px;
+    width: 100%;
+}
+
+.form__input-check[type=checkbox] {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.form__input-check[type=checkbox]+.custom-checkbox {
+    display: block;
+    width: 14px;
+    height: 13px;
+    border: 1px solid var(--color-white);
+    border-radius: 2px;
+}
+
+.form__input-check[type=checkbox]:checked+.custom-checkbox {
+    background-image: url(../img/check.svg);
+    background-repeat: no-repeat;
+    background-size: 11px;
+    background-position: center;
+}
+
+.checkbox-text,
+.checkbox-link {
+    font-size: 12px;
+    line-height: 14px;
+    color: var(--color-white);
+    font-weight: 400;
+}
+
+.checkbox-link {
+    font-weight: bold;
+}
+
+.banner__title {
+    font-size: 28px;
+    line-height: 30px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.banner__list {
+    margin-top: 189px;
+
+    display: grid;
+    gap: 10px;
+
+    list-style: disc;
+
+    padding-left: 20px;
+}
+
+.banner__list-item {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.banner__list-item b {
+    font-weight: bold;
+}
+
+.banner__inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+
+    margin-top: 15px;
+}
+
+.banner__input {
+    padding-left: 22px;
+
+    height: 42px;
+}
+
+.banner__btn {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+}
 
 /*=============== #HEADER ==============*/
 
@@ -699,6 +808,12 @@ body {
     gap: 25px;
 }
 
+.equips__card {
+    position: relative;
+
+    padding-bottom: 39px;
+}
+
 .equips__card-text {
     display: grid;
     gap: 17px;
@@ -791,6 +906,148 @@ body {
     gap: 13px;
 }
 
+.equips__card svg {
+    bottom: 0;
+    position: absolute;
+
+    width: 100%;
+}
+
+
+/*=======================================================*/
+
+
+/*=============== #CREDIT ==============*/
+
+.credit {
+    background: url(../img/credit_mob.webp)no-repeat;
+    background-size: cover;
+
+    padding: 21px 0 16px;
+}
+
+.credit__btn {
+    margin-top: 12px;
+}
+/*=======================================================*/
+
+
+/*=============== #CONTACTS ==============*/
+
+.contacts {
+    background: var(--color-grey);
+
+    padding-top: 14px;
+}
+
+.contacts__map {
+    background: url(../img/map_mob.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding-top: 266px;
+}
+
+.contacts__bg {
+    background: rgba(76, 88, 101, 0.67);
+
+    backdrop-filter: blur(7.5px);
+}
+
+.contacts__info {
+    padding: 8px 0 17px;
+}
+
+.contacts__flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contacts__logo {
+    max-width: 102px;
+}
+
+.contacts__info-list {
+    display: grid;
+    gap: 10px;
+
+    flex-basis: 61%;
+}
+
+.contacts__info-item {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 600;
+    color: var(--color-white);
+
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.contacts__btn {
+    height: 35px;
+
+    margin-top: 17px;
+
+    gap: 6px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 600;
+}
+
+/*=======================================================*/
+
+
+/*=============== #FOOTER ==============*/
+
+.footer {
+    padding: 25px 0 40px;
+
+    background: linear-gradient(180deg, #4C5865 0%, #4C5865 100%);
+}
+
+.footer__text {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.footer__text.bold {
+    font-weight: 600;
+}
+
+.footer__btn {
+    background: none;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    text-decoration: underline;
+    color: var(--color-white);
+    padding: 0;
+
+    margin: 21px 0 28px;
+}
+
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    margin-bottom: 18px;
+}
+
+.footer__info {
+    margin-top: 28px;
+}
+
+.footer__info-toggle {
+    display: none;
+}
 
 /*=======================================================*/
 
@@ -815,11 +1072,27 @@ body {
 
     .equips__filter {
         width: 400px;
+
+        margin: 44px auto;
+    }
+
+    .equips__container {
+        justify-content: center;
     }
 
     .equips__card {
         width: 400px;
 
         justify-content: center;
+    }
+
+    .banner__form {
+        width: 400px;
+    }
+
+    .contacts__info {
+        width: 400px;
+
+        margin: 0 auto;
     }
 }
