--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,10 @@ body {
     margin-top: 34px;
 }
 
+.models__swiper.desk_hide {
+    display: none;
+}
+
 .model__swiper-text {
     font-size: 12px;
     line-height: 14px;
@@ -751,6 +755,26 @@ body {
     border-bottom: 1px solid var(--color-grey);
 }
 
+.models__card-swiper {
+    position: relative;
+}
+
+.models__card-img {
+    width: 100%;
+
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .6s;
+}
+
+.models__card-img.js-active {
+    position: inherit;
+    opacity: 1;
+}
+
 /*=======================================================*/
 
 
@@ -770,10 +794,10 @@ body {
 
 .select2-container--default .select2-selection--single {
     border: none;
-
     border-bottom: 1px solid #2B3C4C;
-
     border-radius: 0;
+
+    background: none;
 }
 
 .select2-container .select2-selection--single .select2-selection__rendered {
@@ -929,6 +953,108 @@ body {
 .credit__btn {
     margin-top: 12px;
 }
+
+/*=======================================================*/
+
+
+/*=============== #TRADE ==============*/
+
+.trade {
+    background: url(../img/trade.webp)no-repeat;
+    background-size: cover;
+
+    padding: 21px 0 16px;
+
+    margin-top: 56px;
+}
+
+.trade__container {
+    margin-top: 201px;
+}
+
+.trade__form-flex {
+    display: flex;
+    gap: 20px;
+
+    margin-bottom: 7px;
+}
+
+.trade__form-flex .trade__form-select {
+    width: 100%;
+}
+
+.trade .select2-container--default .select2-selection--single {
+    height: 49px;
+
+    display: flex;
+    align-items: center;
+
+    border-radius: 72px;
+
+    background: rgba(255, 255, 255, 0.39);
+}
+
+.trade .select2-container .select2-selection--single .select2-selection__rendered {
+    font-size: 12px;
+    line-height: 14px;
+    color: var(--color-white);
+    padding-left: 13px;
+}
+
+.trade .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    background: url(../img/trade-select.svg)no-repeat;
+}
+
+.trade .select2-container--default .select2-selection--single .select2-selection__arrow {
+    width: 20px;
+    top: 11px;
+    right: 13px;
+}
+
+.trade .select2-container--default.select2-container--open.select2-container--below .select2-selection--single, .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple {
+    border-radius: 72px;
+}
+
+.select2-search--dropdown {
+    display: none;
+}
+
+.trade__form-input {
+    margin-top: 30px;
+
+    border-radius: 72px;
+    background: rgba(255, 255, 255, 0.72);
+
+    padding-left: 13px;
+
+    border: none;
+
+    width: 100%;
+    height: 39px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.trade__form-input::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.trade__form-button {
+    height: 53px;
+
+    margin-top: 9px;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+}
+
 /*=======================================================*/
 
 
@@ -1051,6 +1177,146 @@ body {
 
 /*=======================================================*/
 
+/*=============== #POPUP ==============*/
+
+.popup {
+    width: 91%;
+
+    padding: 20px 29px 10px;
+
+    border-radius: 10px;
+
+    display: none;
+}
+
+.fancybox__content>.f-button.is-close-btn {
+    background: none;
+    opacity: 1;
+}
+
+#modalCredit {
+    background: url(../img/modal-credit_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+#modalSuc,
+#modalSuc2 {
+    height: 165px;
+    background: var(--color-white);
+}
+
+.popup__cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0 24px;
+
+    height: 100%;
+}
+
+#modalSpecial {
+    background: url(../img/modal-special_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+.popup__head {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-white);
+
+    display: block;
+
+    text-align: center;
+}
+
+#modalSpecial .popup__head {
+    font-size: 15px;
+    line-height: 17px;
+}
+
+#modalSuc .popup__head,
+#modalSuc2 .popup__head {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 500;
+    color: var(--color-black);
+}
+
+.popup__list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    list-style: disc;
+
+    padding-left: 20px;
+
+    width: max-content;
+
+    margin: 5px auto 12px;
+}
+
+#modalSpecial .popup__list {
+    margin: 10px auto 13px;
+}
+
+.popup__list-item {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.popup__list-item b {
+    font-weight: bold;
+}
+
+.popup__list-item.margin_minus {
+    margin-left: -21px;
+}
+
+.popup__list-item.margin_left {
+    margin-left: 22px;
+}
+
+.popup__form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.popup__input {
+    height: 32px;
+
+    padding-left: 15px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--color-white);
+}
+
+.popup__input::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--color-white);
+}
+
+.popup__btn {
+    height: 32px;
+
+    margin-top: 12px;
+}
+
+.f-button svg {
+    stroke: var(--color-black);
+}
+
+/*=======================================================*/
+
 @media screen and (min-width: 430px) {
     .main-banner__container {
         align-items: center;
@@ -1094,5 +1360,15 @@ body {
         width: 400px;
 
         margin: 0 auto;
+    }
+
+    .trade__form {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+
+    .popup {
+        width: 320px;
     }
 }
